IN PROGRESS - task 89: Registration Test Cases http://redmine.sesa.sti2.at/issues/show/89
Added independent EasyWsdlTest
added library for wsdl2rdf

--- a/registration/core/pom.xml
+++ b/registration/core/pom.xml
@@ -26,6 +26,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.ow2.easywsdl</groupId>
+			<artifactId>easywsdl-wsdl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-ext-wsdl4complexwsdl</artifactId>
 		</dependency>
 		<dependency>
@@ -36,6 +40,10 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>	
+		</dependency>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
 		</dependency>
 	</dependencies>
 
