--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,12 @@
 				<artifactId>cxf-bundle</artifactId>
 				<version>2.7.3</version>
 			</dependency>
+			<dependency>
+				<groupId>xmlunit</groupId>
+				<artifactId>xmlunit</artifactId>
+				<version>1.4</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
