NEW - task 111: Discovery: Discover empty categories, Discover non existing categories  http://redmine.sesa.sti2.at/issues/show/111

--- a/discovery/core/pom.xml
+++ b/discovery/core/pom.xml
@@ -30,13 +30,14 @@
 			<artifactId>stringtemplate</artifactId>
 		</dependency>
 	</dependencies>
-
-
-	<!-- Replace variables in property files -->
 	<build>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/test/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
