IN PROGRESS - task 111: Discovery: Discover empty categories, Discover non existing categories  http://redmine.sesa.sti2.at/issues/show/111

--- a/discovery/core/src/main/resources/default.properties
+++ b/discovery/core/src/main/resources/default.properties
@@ -3,4 +3,5 @@
 ######################################
 discovery.sesame.endpoint = ${discovery.sesame.endpoint}
 discovery.sesame.reposid = ${discovery.sesame.repository.name}
-
+registration.sesame.endpoint = ${registration.sesame.endpoint}
+registration.sesame.reposid = ${registration.sesame.reposid}
