--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -3,7 +3,6 @@
 .sass-cache
 capybara-*.html
 .rspec
-.rvmrc
 /.bundle
 /vendor/bundle
 /log/*
@@ -18,3 +17,5 @@ rerun.txt
 pickle-email-*.html
 .project
 *.war
+/vendor/ruby/*
+/vendor/jruby/*
