--- a/discovery/core/pom.xml
+++ b/discovery/core/pom.xml
@@ -29,18 +29,9 @@
 			<groupId>org.antlr</groupId>
 			<artifactId>stringtemplate</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+		</dependency>
 	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-	</build>
-	
 </project>
