added modules to pom file

--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<modules>
 		<module>util</module>
 		<module>registration</module>
-		<!-- <module>dashboard</module> -->
-		<!-- <module>discovery</module> -->
+		<module>dashboard</module>
+		<module>discovery</module>
 		<!-- <module>monitoring</module> -->
 		<!-- <module>invocation</module> -->
 		<!-- <module>ranking</module> -->
