--- a/dashboard/.rvmrc
+++ b/dashboard/.rvmrc
@@ -9,16 +9,16 @@
 environment_id="jruby-1.7.2@dashboard"
 
 # Uncomment the following lines if you want to verify rvm version per project
-# rvmrc_rvm_version="1.18.5 (stable)" # 1.10.1 seams as a safe start
-# eval "$(echo ${rvm_version}.${rvmrc_rvm_version} | awk -F. '{print "[[ "$1*65536+$2*256+$3" -ge "$4*65536+$5*256+$6" ]]"}' )" || {
-#   echo "This .rvmrc file requires at least RVM ${rvmrc_rvm_version}, aborting loading."
-#   return 1
-# }
+rvmrc_rvm_version="1.18.5 (stable)" # 1.10.1 seams as a safe start
+eval "$(echo ${rvm_version}.${rvmrc_rvm_version} | awk -F. '{print "[[ "$1*65536+$2*256+$3" -ge "$4*65536+$5*256+$6" ]]"}' )" || {
+echo "This .rvmrc file requires at least RVM ${rvmrc_rvm_version}, aborting loading."
+return 1
+}
 
 # Uncomment following line if you want options to be set only for given project.
-# PROJECT_JRUBY_OPTS=( --1.9 )
+PROJECT_JRUBY_OPTS=( --1.9 )
 # The variable PROJECT_JRUBY_OPTS requires the following to be run in shell:
-#    chmod +x ${rvm_path}/hooks/after_use_jruby_opts
+chmod +x ${rvm_path}/hooks/after_use_jruby_opts
 
 # First we attempt to load the desired environment directly from the environment
 # file. This is very fast and efficient compared to running through the entire
@@ -39,15 +39,15 @@ else
 fi
 
 # If you use bundler, this might be useful to you:
-# if [[ -s Gemfile ]] && {
-#   ! builtin command -v bundle >/dev/null ||
-#   builtin command -v bundle | GREP_OPTIONS= \grep $rvm_path/bin/bundle >/dev/null
-# }
-# then
-#   printf "%b" "The rubygem 'bundler' is not installed. Installing it now.\n"
-#   gem install bundler
-# fi
-# if [[ -s Gemfile ]] && builtin command -v bundle >/dev/null
-# then
-#   bundle install | GREP_OPTIONS= \grep -vE '^Using|Your bundle is complete'
-# fi
+if [[ -s Gemfile ]] && {
+   ! builtin command -v bundle >/dev/null ||
+   builtin command -v bundle | GREP_OPTIONS= \grep $rvm_path/bin/bundle >/dev/null
+}
+ then
+   printf "%b" "The rubygem 'bundler' is not installed. Installing it now.\n"
+   gem install bundler
+ fi
+ if [[ -s Gemfile ]] && builtin command -v bundle >/dev/null
+ then
+   bundle install | GREP_OPTIONS= \grep -vE '^Using|Your bundle is complete'
+ fi
