--- a/dashboard/.rvmrc
+++ b/dashboard/.rvmrc
@@ -3,6 +3,8 @@
 # This is an RVM Project .rvmrc file, used to automatically load the ruby
 # development environment upon cd'ing into the directory
 
+rvm_install_on_use_flag=1
+
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
 # Only full ruby name is supported here, for short names use:
 #     echo "rvm use jruby" > .rvmrc
