--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<log.level>error</log.level> <!-- error or debug // mvn install -Dlog.level=debug --> 
+		<log.level>error</log.level> <!-- error or debug // mvn install -Dlog.level=debug -->
 		<log.file>target/at.sti2.msee-log.log</log.file>
 
 		<cxf.version>2.4.1</cxf.version>
@@ -90,6 +90,17 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<!-- Tomcat deploy -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://localhost:8080/manager/text</url>
+					<server>localtomcat</server>
+				</configuration>
+			</plugin>
+
 
 			<!-- Launch platform from jetty -->
 			<plugin>
@@ -270,12 +281,12 @@
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.1</version>
 			</dependency>
-		    <dependency>
+			<dependency>
 				<groupId>org.apache.axis</groupId>
 				<artifactId>axis</artifactId>
 				<version>1.4</version>
-		    </dependency>
-		    <dependency>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.xmlbeans</groupId>
 				<artifactId>xmlbeans</artifactId>
 				<version>2.6.0</version>
