Set up dashboard for auto deploy via maven

--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				  <configuration>
 					<warFile>target/ROOT.war</warFile>
+					<path>/</path>
                   </configuration>
 			</plugin>
 			<plugin>
