--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,11 @@
 		<!-- Default properties -->
 		<default.port>8080</default.port>
 		<default.sesame.endpoint>http://sesa.sti2.at:8080/openrdf-sesame</default.sesame.endpoint>
+		<default.sesame.repository.name>msee</default.sesame.repository.name>
 
 		<!-- Discovery properties -->
 		<discovery.sesame.endpoint>${default.sesame.endpoint}</discovery.sesame.endpoint>
-		<discovery.sesame.repository.name>msee</discovery.sesame.repository.name>
+		<discovery.sesame.repository.name>${default.sesame.repository.name}</discovery.sesame.repository.name>
 		<discovery.port>${default.port}</discovery.port>
 
 		<!-- Monitoring properties -->
@@ -48,7 +49,7 @@
 
 		<!-- Registration properties -->
 		<registration.sesame.endpoint>${default.sesame.endpoint}</registration.sesame.endpoint>
-		<registration.sesame.reposid>msee</registration.sesame.reposid>
+		<registration.sesame.reposid>${default.sesame.repository.name}</registration.sesame.reposid>
 		<registration.ws.port>${default.port}</registration.ws.port>
 
 		<!-- Invocation properties -->
