RESOLVED - task 145: Change of all test property files to use a test repository http://redmine.sesa.sti2.at/issues/show/145

--- a/util/triplestore-client/src/test/resources/default.properties
+++ b/util/triplestore-client/src/test/resources/default.properties
@@ -1,5 +1,5 @@
 ######################################
-# Triplestore Access Information
+# Triplestore Access Information - TEST
 ######################################
 repository.sesame.endpoint = ${default.sesame.endpoint}
-repository.sesame.reposid = test
+repository.sesame.reposid = ${default.sesame.test.repository.name}
