--- a/discovery/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/discovery/webservice/src/main/webapp/WEB-INF/web.xml
@@ -4,34 +4,21 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
          http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>Discovery Webservice</display-name>
-        <mime-mapping>
-                <extension>ico</extension>
-                <mime-type>image/x-icon</mime-type>
-        </mime-mapping>
-        <listener>
-                <!-- For Metro, use this listener-class instead: com.sun.xml.ws.transport.http.servlet.WSServletContextListener -->
-                <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-        </listener>
-        <!-- Remove below context-param element if using Metro -->
-        <context-param>
-                <param-name>contextConfigLocation</param-name>
-                <param-value>
-                        classpath:META-INF/cxf/cxf.xml
-                        classpath:META-INF/cxf/cxf-extension-soap.xml
-                        classpath:META-INF/cxf/cxf-servlet.xml
-                </param-value>
-        </context-param>
-        <servlet>
-                <servlet-name>WebServicePort</servlet-name>
-                <!-- For Metro, use this servlet-class instead: com.sun.xml.ws.transport.http.servlet.WSServlet -->
-                <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-                <load-on-startup>1</load-on-startup>
-        </servlet>
-        <servlet-mapping>
-                <servlet-name>WebServicePort</servlet-name>
-                <url-pattern>/*</url-pattern>
-        </servlet-mapping>
-        <session-config>
-                <session-timeout>60</session-timeout>
-        </session-config>
+	<mime-mapping>
+		<extension>ico</extension>
+		<mime-type>image/x-icon</mime-type>
+	</mime-mapping>
+	<servlet>
+		<servlet-name>AxisServlet</servlet-name>
+		<display-name>Apache-Axis Servlet</display-name>
+		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
 </web-app>
