--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -11,6 +11,22 @@
 		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
+	<repositories>
+		<repository>
+			<id>axis2m</id>
+			<name>Axis2m Repository</name>
+			<url>http://axis2m.sourceforge.net/repo/</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>axis2m</id>
+			<name>Axis2m Repository</name>
+			<url>http://axis2m.sourceforge.net/repo/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
@@ -50,9 +66,13 @@
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 		</dependency>
-		<dependency>
+		<dependency><!-- for web service tests -->
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
@@ -80,6 +100,126 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
+				<version>1.5.4</version>
+				<executions>
+					<execution>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>java2wsdl</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className>
+					<outputFileName>${project.build.directory}/dicovery.wsdl</outputFileName>
+					<wsdlVersion>2</wsdlVersion>
+				</configuration>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
+				<version>1.5.4</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>wsdl2code</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<classpathElements>${project.build.outputDirectory}</classpathElements>
+					<wsdlFile>${basedir}/dicovery.wsdl</wsdlFile>
+					<wsdlVersion>2</wsdlVersion>
+					<databindingName>xmlbeans</databindingName>
+					<packageName>at.sti2.msee.discovery.webservice</packageName>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/axis2/wsdl2code/src</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+
+	</build>
+
+
+
+	<!-- <build> -->
+	<!-- <finalName>discovery-webservice</finalName> -->
+	<!-- <plugins> -->
+	<!-- <plugin> -->
+
+	<!-- Maven compiler plugin -->
+	<!-- <artifactId>maven-compiler-plugin</artifactId> -->
+	<!-- <configuration> -->
+	<!-- <source>1.7</source> -->
+	<!-- <target>1.7</target> -->
+	<!-- <optimize>true</optimize> -->
+	<!-- </configuration> -->
+	<!-- </plugin> -->
+
+
+	<!-- <plugin> -->
+	<!-- <groupId>org.mortbay.jetty</groupId> -->
+	<!-- <artifactId>maven-jetty-plugin</artifactId> -->
+	<!-- <version>6.1.26</version> -->
+	<!-- <configuration> -->
+	<!-- <webAppConfig> -->
+	<!-- <contextPath>/</contextPath> -->
+	<!-- </webAppConfig> -->
+	<!-- </configuration> -->
+	<!-- </plugin> -->
+
+
+	<!-- <plugin> -->
+	<!-- <groupId>org.axis2m</groupId> -->
+	<!-- <artifactId>axis2m-plugins</artifactId> -->
+	<!-- <version>1.0M2</version> -->
+
+
+	<!-- <configuration> <wsdlFile>http://localhost:8080/services/SimpleService?wsdl</wsdlFile> 
+		</configuration> -->
+
+	<!-- </plugin> -->
+
+
+	<!-- <plugin> -->
+	<!-- <groupId>org.apache.axis2</groupId> -->
+	<!-- <artifactId>axis2-aar-maven-plugin</artifactId> -->
+	<!-- <version>1.4.1</version> -->
+	<!-- <configuration> -->
+	<!-- <servicesXmlFile> -->
+	<!-- src/main/webapp/WEB-INF/services/DiscoveryImpl/META-INF/services.xml</servicesXmlFile> -->
+	<!-- </configuration> -->
+
+	<!-- </plugin> -->
+
+	<!-- </plugins> -->
+	<!-- </build> -->
+
 	<!-- <build> -->
 	<!-- <plugins> -->
 	<!-- <plugin> -->
@@ -103,38 +243,39 @@
 	<!-- </plugins> -->
 	<!-- </build> -->
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jvnet.jax-ws-commons</groupId>
-				<artifactId>jaxws-maven-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>wsgen</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<packageName>at.sti2.msee.discovery.webservice</packageName> <!-- The name of your generated source package -->
-					<sei>at.sti2.msee.discovery.webservice.DiscoveryImpl</sei>
-					<genWsdl>true</genWsdl>
-					
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.sun.xml.ws</groupId>
-						<artifactId>jaxws-tools</artifactId>
-						<version>2.2.5</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+	<!-- <build> -->
+	<!-- <plugins> -->
+	<!-- <plugin> -->
+	<!-- <groupId>org.jvnet.jax-ws-commons</groupId> -->
+	<!-- <artifactId>jaxws-maven-plugin</artifactId> -->
+	<!-- <version>2.1</version> -->
+	<!-- <executions> -->
+	<!-- <execution> -->
+	<!-- <phase>process-classes</phase> -->
+	<!-- <goals> -->
+	<!-- <goal>wsgen</goal> -->
+	<!-- </goals> -->
+	<!-- </execution> -->
+	<!-- </executions> -->
+	<!-- <configuration> -->
+	<!-- <packageName>at.sti2.msee.discovery.webservice</packageName> The name 
+		of your generated source package -->
+	<!-- <sei>at.sti2.msee.discovery.webservice.DiscoveryImpl</sei> -->
+	<!-- <genWsdl>true</genWsdl> -->
+
+	<!-- </configuration> -->
+	<!-- <dependencies> -->
+	<!-- <dependency> -->
+	<!-- <groupId>com.sun.xml.ws</groupId> -->
+	<!-- <artifactId>jaxws-tools</artifactId> -->
+	<!-- <version>2.2.5</version> -->
+	<!-- </dependency> -->
+	<!-- </dependencies> -->
+	<!-- </plugin> -->
 
 
-		</plugins>
-	</build>
+	<!-- </plugins> -->
+	<!-- </build> -->
 
 
 	<!-- <build> -->
