--- a/pom.xml
+++ b/pom.xml
@@ -322,7 +322,12 @@
 			<dependency>
 				<groupId>org.apache.axis2</groupId>
 				<artifactId>axis2-kernel</artifactId>
-				<version>1.6.2</version>
+				<version>1.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2</artifactId>
+				<version>1.6.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
