IN PROGRESS - task 146: Discovery migrate to AXIS2 http://redmine.sesa.sti2.at/issues/show/146

--- a/discovery/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/discovery/webservice/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>AxisServlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
+		<url-pattern>/service/*</url-pattern>
 	</servlet-mapping>
 	
 	<session-config>
