--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -76,7 +76,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-kernel</artifactId>
+			<artifactId>axis2-transport-http</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
@@ -102,24 +106,26 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.axis2</groupId>
-				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
-				<version>1.5.4</version>
-				<executions>
-					<execution>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>java2wsdl</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className>
-					<outputFileName>${project.build.directory}/dicovery.wsdl</outputFileName>
-					<wsdlVersion>2</wsdlVersion>
-				</configuration>
-			</plugin>
+
+			<!-- uncommented for wsdl creating - and uncomment the other plugins -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.axis2</groupId> -->
+			<!-- <artifactId>axis2-java2wsdl-maven-plugin</artifactId> -->
+			<!-- <version>1.5.4</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <phase>process-classes</phase> -->
+			<!-- <goals> -->
+			<!-- <goal>java2wsdl</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- <configuration> -->
+			<!-- <className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className> -->
+			<!-- <outputFileName>${basedir}src/main/webapp/discovery.wsdl</outputFileName> -->
+			<!-- <wsdlVersion>2</wsdlVersion> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 
 			<plugin>
@@ -136,7 +142,7 @@
 				</executions>
 				<configuration>
 					<classpathElements>${project.build.outputDirectory}</classpathElements>
-					<wsdlFile>${basedir}/dicovery.wsdl</wsdlFile>
+					<wsdlFile>${basedir}/src/main/webapp/discovery.wsdl</wsdlFile>
 					<wsdlVersion>2</wsdlVersion>
 					<databindingName>xmlbeans</databindingName>
 					<packageName>at.sti2.msee.discovery.webservice</packageName>
