--- a/pom.xml
+++ b/pom.xml
@@ -291,7 +291,7 @@
 			<dependency>
 				<groupId>org.apache.xmlbeans</groupId>
 				<artifactId>xmlbeans</artifactId>
-				<version>2.6.0</version>
+				<version>2.4.0</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.xml</groupId>
@@ -327,6 +327,16 @@
 			<dependency>
 				<groupId>org.apache.axis2</groupId>
 				<artifactId>axis2</artifactId>
+				<version>1.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-transport-http</artifactId>
+				<version>1.6.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-transport-local</artifactId>
 				<version>1.6.1</version>
 			</dependency>
 		</dependencies>
