--- a/discovery/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/discovery/webservice/src/main/webapp/WEB-INF/web.xml
@@ -10,14 +10,49 @@
 	</mime-mapping>
 	<servlet>
 		<servlet-name>AxisServlet</servlet-name>
-		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
+		<servlet-class>org.apache.axis2.transport.http.AxisServlet
+		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>AxisServlet</servlet-name>
-		<url-pattern>/service/*</url-pattern>
+		<url-pattern>/servlet/AxisServlet</url-pattern>
 	</servlet-mapping>
-	
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>*.jws</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+	<mime-mapping>
+		<extension>inc</extension>
+		<mime-type>text/plain</mime-type>
+	</mime-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>/axis2-web/index.jsp</welcome-file>
+	</welcome-file-list>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/axis2-web/Error/error404.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/axis2-web/Error/error500.jsp</location>
+	</error-page>
+
+
+
+
+
+
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
