--- a/discovery/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/discovery/webservice/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>AxisServlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
+		<url-pattern>/service/*</url-pattern>
 	</servlet-mapping>
 	<mime-mapping>
 		<extension>inc</extension>
