RESOLVED - task 146: Discovery migrate to AXIS2 http://redmine.sesa.sti2.at/issues/show/146

--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -108,24 +108,24 @@
 		<plugins>
 
 			<!-- uncommented for wsdl creating - and uncomment the other plugins -->
-<!-- 			<plugin> -->
-<!-- 			<groupId>org.apache.axis2</groupId> -->
-<!-- 			<artifactId>axis2-java2wsdl-maven-plugin</artifactId> -->
-<!-- 			<version>1.5.4</version> -->
-<!-- 			<executions> -->
-<!-- 			<execution> -->
-<!-- 			<phase>process-classes</phase> -->
-<!-- 			<goals> -->
-<!-- 			<goal>java2wsdl</goal> -->
-<!-- 			</goals> -->
-<!-- 			</execution> -->
-<!-- 			</executions> -->
-<!-- 			<configuration> -->
-<!-- 			<className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className> -->
-<!-- 			<outputFileName>${basedir}/src/main/webapp/discovery.wsdl</outputFileName> -->
-<!-- 			<wsdlVersion>2</wsdlVersion> -->
-<!-- 			</configuration> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
+				<version>1.5.4</version>
+				<executions>
+					<execution>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>java2wsdl</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className>
+					<outputFileName>${basedir}/src/main/webapp/discovery.wsdl</outputFileName>
+					<wsdlVersion>2</wsdlVersion>
+				</configuration>
+			</plugin>
 
 
 			<plugin>
