--- a/invocation/grounding/pom.xml
+++ b/invocation/grounding/pom.xml
@@ -17,11 +17,11 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>monitoring.core</artifactId>
 			<version>${project.parent.version}</version>
-		</dependency>
+		</dependency>  -->
 	
 		<dependency>
 			<groupId>log4j</groupId>
