--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 		<module>registration</module>
 		<module>discovery</module>
 		<module>dashboard</module>
-		<!-- <module>monitoring</module> -->
-		<!-- <module>invocation</module> -->
-		<!-- <module>ranking</module> -->
+		<module>monitoring</module>
+		<module>invocation</module>
+		<!--<module>ranking</module> -->
 	</modules>
 
 	<properties>
@@ -313,6 +313,11 @@
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
 				<version>2.0-beta4</version>
+			</dependency>
+			<dependency>
+				<groupId>dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>1.6.1</version>
 			</dependency>
 
 			<dependency>
