trying to fix testcases ...

--- a/invocation/core/src/main/resources/default.properties
+++ b/invocation/core/src/main/resources/default.properties
@@ -3,3 +3,12 @@
 ######################################
 invocation.sesame.endpoint = ${invocation.sesame.endpoint}
 invocation.sesame.reposid = ${invocation.sesame.reposid}
+
+############################
+# Invocation Information
+###########################
+monitoring.endpoint.servicename = ${monitoring.endpoint.servicename}
+monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
