--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -42,12 +42,11 @@
 			</exclusions>
 		</dependency>
 		
-		<!-- FIX THIS TODO: 
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-transport-locjaral</artifactId>
+			<artifactId>axis2-transport-local</artifactId>
 		</dependency>
-		 -->
+
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-http</artifactId>
@@ -87,5 +86,21 @@
 			<artifactId>commons-discovery</artifactId>
 
 		</dependency>
+		
+				<!-- cxf -->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+			</dependency>
 	</dependencies>
 </project>
