--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -10,7 +10,7 @@
 		<artifactId>registration</artifactId>
 		<version>m17.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -50,10 +50,10 @@
 					<wsdlFile>${project.build.directory}/../src/main/resources/RegistrationAPI.wsdl</wsdlFile>
 					<wsdlVersion>2</wsdlVersion>
 					<databindingName>adb</databindingName>
-					<packageName>at.sti2.msee.registration</packageName>
+					<packageName>at.sti2.msee.registration.axis2</packageName>
 					<outputDirectory>${project.build.directory}/../src/test/</outputDirectory>
 					<targetSourceFolderLocation>java</targetSourceFolderLocation>
-					<databindingName>xmlbeans</databindingName>
+					<databindingName>adb</databindingName>
 				</configuration>
 			</plugin>
 
@@ -143,16 +143,16 @@
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 		</dependency>
-<dependency>
-    <groupId>org.apache.ws.commons.axiom</groupId>
-    <artifactId>axiom-api</artifactId>
-    <version>1.2.14</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.ws.commons.axiom</groupId>
-    <artifactId>axiom-impl</artifactId>
-    <version>1.2.14</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-api</artifactId>
+			<version>1.2.14</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-impl</artifactId>
+			<version>1.2.14</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
@@ -172,6 +172,16 @@
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-xmlbeans</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
 			<version>1.6.2</version>
 		</dependency>
 	</dependencies>
