--- a/registration/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/registration/webservice/src/main/webapp/WEB-INF/web.xml
@@ -11,21 +11,24 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-            classpath:META-INF/cxf/cxf.xml
-            classpath:META-INF/cxf/cxf-servlet.xml
+            classpath:/applicationContext.xml
         </param-value>
 	</context-param>
+
 	<servlet>
-		<servlet-name>CXFServlet</servlet-name>
-		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<servlet-name>AxisServlet</servlet-name>
+		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>CXFServlet</servlet-name>
+		<servlet-name>AxisServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+
 	<session-config>
 		<session-timeout>60</session-timeout>
 	</session-config>
+
 </web-app>
 
