--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -14,112 +14,44 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.axis2</groupId>
-				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
-				<version>1.6.2</version>
+				<groupId>org.jvnet.jax-ws-commons</groupId>
+				<artifactId>jaxws-maven-plugin </artifactId>
+				<version>2.2</version>
 				<executions>
 					<execution>
-						<id>install</id>
-						<phase>install</phase>
+						<id>Create WSDL</id>
+						<phase>generate-test-resources</phase>
 						<goals>
-							<goal>java2wsdl</goal>
+							<goal>wsgen</goal>
 						</goals>
+						<configuration>
+							<sei>at.sti2.msee.registration.webservice.WebServiceRegistrationImpl</sei>
+							<genWsdl>true</genWsdl>
+							<keep>false</keep>
+							<verbose>true</verbose>
+							<resourceDestDir>src/test/resources/wsdl</resourceDestDir>
+						</configuration>
 					</execution>
-				</executions>
-				<configuration>
-					<className>at.sti2.msee.registration.api.ServiceRegistration</className>
-					<outputFileName>${project.build.directory}/../src/main/resources/RegistrationAPI.wsdl</outputFileName>
-					<wsdlVersion>2</wsdlVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.axis2</groupId>
-				<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
-				<version>1.6.2</version>
-				<executions>
 					<execution>
-						<id>install</id>
-						<phase>install</phase>
+						<id>Create client</id>
+						<phase>generate-test-sources</phase>
 						<goals>
-							<goal>wsdl2code</goal>
+							<goal>wsimport</goal>
 						</goals>
+						<configuration>
+							<wsdlDirectory>src/test/resources/wsdl</wsdlDirectory>
+							<wsdlFiles>
+								<wsdlFile>RegistrationService.wsdl</wsdlFile>
+							</wsdlFiles>
+							<implDestDir>src/test/java</implDestDir>
+							<sourceDestDir>src/test/java</sourceDestDir>
+							<verbose>true</verbose>
+							<keep>true</keep>
+						</configuration>
 					</execution>
+
 				</executions>
-				<configuration>
-					<classpathElements>${project.build.outputDirectory}</classpathElements>
-					<wsdlFile>${project.build.directory}/../src/main/resources/RegistrationAPI.wsdl</wsdlFile>
-					<wsdlVersion>2</wsdlVersion>
-					<databindingName>adb</databindingName>
-					<packageName>at.sti2.msee.registration.axis2</packageName>
-					<outputDirectory>${project.build.directory}/../src/test/</outputDirectory>
-					<targetSourceFolderLocation>java</targetSourceFolderLocation>
-					<databindingName>adb</databindingName>
-				</configuration>
 			</plugin>
-
-			<!-- <plugin> -->
-			<!-- <groupId>org.codehaus.mojo</groupId> -->
-			<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>generate-sources</id> -->
-			<!-- <phase>generate-sources</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>add-source</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <sources> -->
-			<!-- <source>${project.build.directory}/axis2/wsdl2code/src</source> -->
-			<!-- </sources> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
-
-			<!-- <plugin> -->
-			<!-- Generate WSDL files from annotations in the implementation -->
-			<!-- <groupId>org.apache.cxf</groupId> -->
-			<!-- <artifactId>cxf-java2ws-plugin</artifactId> -->
-			<!-- <version>2.7.3</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>install</id> -->
-			<!-- <phase>install</phase> -->
-			<!-- <configuration> -->
-			<!-- <className>at.sti2.msee.registration.api.ServiceRegistration</className> -->
-			<!-- <outputFile>${project.build.directory}/../src/main/resources/RegistrationAPI.wsdl</outputFile> -->
-			<!-- <genWsdl>true</genWsdl> -->
-			<!-- <genClient>true</genClient> -->
-			<!-- <verbose>true</verbose> -->
-			<!-- </configuration> -->
-			<!-- <goals> -->
-			<!-- <goal>java2ws</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.cxf</groupId> -->
-			<!-- <artifactId>cxf-codegen-plugin</artifactId> -->
-			<!-- <version>2.7.3</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <id>generate-sources</id> -->
-			<!-- <phase>generate-sources</phase> -->
-			<!-- <configuration> -->
-			<!-- <sourceRoot>${project.build.directory}/../src/test/java/</sourceRoot> -->
-			<!-- <wsdlOptions> -->
-			<!-- <wsdlOption> -->
-			<!-- <wsdl>${project.build.directory}/../src/main/resources/RegistrationAPI.wsdl</wsdl> -->
-			<!-- </wsdlOption> -->
-			<!-- </wsdlOptions> -->
-			<!-- </configuration> -->
-			<!-- <goals> -->
-			<!-- <goal>wsdl2java</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
 		</plugins>
 		<resources>
 			<resource>
@@ -127,6 +59,42 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.jvnet.jax-ws-commons
+										</groupId>
+										<artifactId>
+											jaxws-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.2,)
+										</versionRange>
+										<goals>
+											<goal>wsgen</goal>
+											<goal>wsimport</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
@@ -142,47 +110,6 @@
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.ws.commons.axiom</groupId>
-			<artifactId>axiom-api</artifactId>
-			<version>1.2.14</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.ws.commons.axiom</groupId>
-			<artifactId>axiom-impl</artifactId>
-			<version>1.2.14</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlbeans</groupId>
-			<artifactId>xmlbeans</artifactId>
-			<version>2.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-kernel</artifactId>
-			<version>1.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2</artifactId>
-			<version>1.6.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-xmlbeans</artifactId>
-			<version>1.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-transport-local</artifactId>
-			<version>1.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-transport-http</artifactId>
-			<version>1.6.2</version>
 		</dependency>
 	</dependencies>
 </project>
