editing repository for testing to msee-test

--- a/registration/webservice/src/test/resources/default.properties
+++ b/registration/webservice/src/test/resources/default.properties
@@ -2,4 +2,4 @@
 # Triplestore Access Information
 ######################################
 registration.sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-registration.sesame.reposid = msee
+registration.sesame.reposid = ${default.sesame.test.repository.name}
