--- a/invocation/core/src/test/resources/default.properties
+++ b/invocation/core/src/test/resources/default.properties
@@ -2,7 +2,7 @@
 # Triplestore Access Information
 ######################################
 invocation.sesame.endpoint = ${invocation.sesame.endpoint}
-invocation.sesame.reposid = ${default.sesame.test.repository.name}
+invocation.sesame.reposid = ${invocation.sesame.reposid}
 
 ############################
 # Invocation Information
@@ -10,5 +10,5 @@ invocation.sesame.reposid = ${default.sesame.test.repository.name}
 monitoring.endpoint.servicename = ${monitoring.endpoint.servicename}
 monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
 monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
-monitoring.triplestore.reposid = ${default.sesame.test.repository.name}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
 monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
