Task 166 adapting discovery

--- a/discovery/core/pom.xml
+++ b/discovery/core/pom.xml
@@ -21,6 +21,10 @@
 			<artifactId>util.triplestore.client</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>registration.core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
