--- a/util/iserve-commons-io/pom.xml
+++ b/util/iserve-commons-io/pom.xml
@@ -3,12 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-<!-- 	<parent> -->
-<!-- 		<artifactId>iserve-parent</artifactId> -->
-<!-- 		<groupId>uk.ac.open.kmi.iserve</groupId> -->
-<!-- 		<version>1.0-SNAPSHOT</version> -->
-<!-- 	</parent> -->
-	
+	<parent>
+		<artifactId>iserve-parent</artifactId>
+		<groupId>uk.ac.open.kmi.iserve</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 	<groupId>uk.ac.open.kmi.iserve</groupId>
 	<artifactId>iserve-commons-io</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
