--- a/util/triplestore-client/pom.xml
+++ b/util/triplestore-client/pom.xml
@@ -23,12 +23,12 @@
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqlxml</artifactId>
-			<version>2.6.1</version>
+			<version>${openrdf-sesame.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqljson</artifactId>
-			<version>2.6.1</version>
+			<version>${openrdf-sesame.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -54,7 +54,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.semweb4j</groupId>
-			<artifactId>rdf2go.impl.sesame23</artifactId>
+			<artifactId>rdf2go.impl.sesame</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.semweb4j</groupId>
