Started to integrate monitoring as seperate module into the project.

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<module>discovery</module>
 		<module>invocation</module>
 		<module>dashboard</module>
-		<!-- <module>monitoring</module> -->
+		<module>monitoring</module>
 		<!-- <module>ranking</module> -->
 	</modules>
 
