continued integrating monitoring.  mvn clean install passes again. [!dashboard module deactivated]

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<module>registration</module>
 		<module>discovery</module>
 		<module>invocation</module>
-		<module>dashboard</module>
+		<!-- <module>dashboard</module>-->
 		<module>monitoring</module>
 		<!-- <module>ranking</module> -->
 	</modules>
