Continued monitoring part. Features: Enable, Disable, Clear Webservice out of monitoring

--- a/monitoring/core/src/main/resources/log4j.properties
+++ b/monitoring/core/src/main/resources/log4j.properties
@@ -1,12 +1,8 @@
-log4j.rootLogger=ERROR
-log4j.logger.at.sti2.wsmf.core=DEBUG, S
+# Define the root logger 
+log4j.rootLogger = INFO , stdout
 
-log4j.appender.S=org.apache.log4j.ConsoleAppender
-log4j.appender.S.layout=org.apache.log4j.PatternLayout
-log4j.appender.S.layout.ConversionPattern=%d : %-7p : %m%n
-#log4j.appender.S.layout.ConversionPattern=%d : %-10t %-7p %32F:%-4L : %m%n
-
-#log4j.appender.R=org.apache.log4j.RollingFileAppender
-#log4j.appender.R.File=/tmp/pca.log
-#log4j.appender.R.layout=org.apache.log4j.PatternLayout
-#log4j.appender.R.layout.ConversionPattern=%d : %-15t %-7p %-37c : %m%n
+# Console appender configuration  
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
+# Pattern to output the caller's file name and line number.  
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %5p %5M.%C - %m%n  
