--- a/monitoring/core/pom.xml
+++ b/monitoring/core/pom.xml
@@ -44,7 +44,12 @@
 			<groupId>org.apache.jena</groupId>
 			<artifactId>apache-jena-libs</artifactId>
 			<type>pom</type>
-			<version>2.10.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
 		</dependency>
 
 		<dependency>
