change of registration webservice resources to pass jenkins tests

--- a/registration/webservice/src/test/resources/tester.properties
+++ b/registration/webservice/src/test/resources/tester.properties
@@ -2,4 +2,4 @@
 # Triplestore Access Information
 ######################################
 registration.sesame.endpoint = http://localhost:8080/openrdf-sesame
-registration.sesame.reposid = msee-test
+registration.sesame.reposid = msee-test-test
