--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,44 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>Ontotext</id>
+			<name>Ontotext Lab</name>
+			<url>http://stronghold.sirma.bg/maven2</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>thirdparty-releases</id>
+			<name>JBoss Thirdparty Releases</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
+		</repository>
+
+		<repository>
+			<id>semweb4j-snapshots</id>
+			<name>Semweb4j.org maven snapshot repo</name>
+			<url>http://semweb4j.org/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>sti2-archiva-external</id>
+			<url>http://maven.sti2.at/archiva/repository/external</url>
+		</repository>
+		<repository>
+			<id>sti2-archiva-snapshots</id>
+			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
+		</repository>
+		<repository>
+			<id>aduna-repo</id>
+			<name>Aduna</name>
+			<url>http://repository.aduna-software.org/maven2/</url>
+		</repository>
 	</repositories>
 
 	<!-- Dependencies for the whole project are declared here to make sure the 
@@ -215,7 +253,7 @@
 				<artifactId>monitoring.core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-						<dependency>
+			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>invocation.grounding</artifactId>
 				<version>${project.version}</version>
