--- a/ranking/core/pom.xml
+++ b/ranking/core/pom.xml
@@ -33,6 +33,52 @@
 			<artifactId>monitoring.core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>4.6</version>
+		</dependency>
+
+
+		<!-- WSMO -->
+		<dependency>
+			<groupId>wsmx</groupId>
+			<artifactId>wsmx-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.wsmo4j</groupId>
+			<artifactId>wsmo4j-parser</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>wsml2reasoner</groupId>
+			<artifactId>wsml2reasoner</artifactId>
+			<version>0.6.4</version>
+		</dependency>
+		<!-- Iris -->
+		<dependency>
+			<groupId>iris</groupId>
+			<artifactId>iris</artifactId>
+			<version>0.58</version>
+		</dependency>
+		<!-- Jax -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>jsr311-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<!-- sti maven repo -->
+		<dependency>
+			<groupId>eu.soa4all</groupId>
+			<artifactId>validation</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
