196: Create Test web service for invocation http://redmine.sesa.sti2.at/issues/show/196

--- a/invocation/core/src/test/resources/log4j.properties
+++ b/invocation/core/src/test/resources/log4j.properties
@@ -15,4 +15,4 @@ log4j.appender.C.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-20t %-5p %-25c{1}: 
 #log4j.appender.F.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-20t %-5p %-25c{1}: %m%n
 
 #Level INFO for DERI code and FATAL for all other code
-log4j.logger.at.sti2.msee=DEBUG
+log4j.logger.at.sti2.msee=WARN
