--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -42,6 +42,16 @@
 			<groupId>javax.xml</groupId>
 			<artifactId>jaxrpc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
