fixing dependencies in monitoring (jaxrpc to jaxrpc-api)

--- a/monitoring/core/pom.xml
+++ b/monitoring/core/pom.xml
@@ -37,7 +37,7 @@
 
 		<dependency>
 			<groupId>javax.xml</groupId>
-			<artifactId>jaxrpc</artifactId>
+			<artifactId>jaxrpc-api</artifactId>
 		</dependency>
 
 		<dependency>
