--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -97,7 +97,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.xml</groupId>
-			<artifactId>jaxrpc</artifactId>
+			<artifactId>jaxrpc-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-discovery</groupId>
