--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -40,7 +40,7 @@
 
 		<dependency>
 			<groupId>javax.xml</groupId>
-			<artifactId>jaxrpc</artifactId>
+			<artifactId>jaxrpc-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.mail</groupId>
@@ -84,22 +84,22 @@
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-bundle</artifactId>
-			<version>1.8</version>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
-			<version>1.8</version>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-core</artifactId>
-			<version>1.8</version>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
-			<version>1.7</version>
+			<version>1.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>asm</groupId>
