--- a/ranking/core/src/main/resources/default.properties
+++ b/ranking/core/src/main/resources/default.properties
@@ -3,7 +3,7 @@
 ###########################
 ranking.triplestore.endpoint = ${ranking.triplestore.endpoint}
 ranking.triplestore.reposid = ${ranking.triplestore.reposid}
-
+ranking.instance.prefixuri = ${ranking.instance.prefixuri}
 ######################################
 # Triplestore Access Information
 ######################################
