Dashboard now displays chart again for services. TestDataGenerator now generates data in correct time/date order

--- a/discovery/core/src/main/resources/default.properties
+++ b/discovery/core/src/main/resources/default.properties
@@ -5,3 +5,16 @@ discovery.sesame.endpoint = ${discovery.sesame.endpoint}
 discovery.sesame.reposid = ${discovery.sesame.repository.name}
 registration.sesame.endpoint = ${registration.sesame.endpoint}
 registration.sesame.reposid = ${registration.sesame.reposid}
+
+######################################
+# Triplestore Access Information
+######################################
+invocation.sesame.endpoint = ${invocation.sesame.endpoint}
+invocation.sesame.reposid = ${invocation.sesame.reposid}
+
+############################
+# Invocation Information
+###########################
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
