--- a/util/triplestore-client/src/test/resources/default.properties
+++ b/util/triplestore-client/src/test/resources/default.properties
@@ -3,3 +3,16 @@
 ######################################
 repository.sesame.endpoint = ${default.sesame.endpoint}
 repository.sesame.reposid = ${default.sesame.test.repository.name}
+
+######################################
+# Triplestore Access Information
+######################################
+invocation.sesame.endpoint = ${invocation.sesame.endpoint}
+invocation.sesame.reposid = ${invocation.sesame.reposid}
+
+############################
+# Invocation Information
+###########################
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
